--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,7 @@ dependencies:
   - async_generator=1.10=py_0
   - attrs=20.2.0=py_0
   - backcall=0.2.0=py_0
+  - blas=1.0=mkl
   - bleach=3.2.1=py_0
   - ca-certificates=2020.10.14=0
   - certifi=2020.6.20=py38_0
@@ -23,12 +24,14 @@ dependencies:
   - icu=58.2=h0a44026_3
   - importlib-metadata=2.0.0=py_1
   - importlib_metadata=2.0.0=1
+  - intel-openmp=2020.2=258
   - ipykernel=5.3.4=py38h5ca1d4c_0
   - ipython=7.18.1=py38h5ca1d4c_0
   - ipython_genutils=0.2.0=py38_0
   - ipywidgets=7.5.1=py_1
   - jedi=0.17.2=py38_0
   - jinja2=2.11.2=py_0
+  - joblib=0.17.0=py_0
   - jpeg=9b=he5867d9_2
   - jsonschema=3.2.0=py_2
   - jupyter=1.0.0=py38_7
@@ -39,17 +42,25 @@ dependencies:
   - libcxx=10.0.0=1
   - libedit=3.1.20191231=h1de35cc_1
   - libffi=3.3=hb1e8313_2
+  - libgfortran=3.0.1=h93005f0_2
   - libiconv=1.16=h1de35cc_0
   - libpng=1.6.37=ha441bb4_0
   - libsodium=1.0.18=h1de35cc_0
+  - llvm-openmp=10.0.0=h28b9765_0
   - markupsafe=1.1.1=py38h1de35cc_1
   - mistune=0.8.4=py38h1de35cc_1001
+  - mkl=2019.4=233
+  - mkl-service=2.3.0=py38hfbe908c_0
+  - mkl_fft=1.2.0=py38hc64f4ea_0
+  - mkl_random=1.1.1=py38h959d312_0
   - nbclient=0.5.1=py_0
   - nbconvert=6.0.7=py38_0
   - nbformat=5.0.8=py_0
   - ncurses=6.2=h0a44026_1
   - nest-asyncio=1.4.1=py_0
   - notebook=6.1.4=py38_0
+  - numpy=1.19.1=py38h3b9f5b6_0
+  - numpy-base=1.19.1=py38hcfb5961_0
   - openssl=1.1.1h=haf1e3a3_0
   - packaging=20.4=py_0
   - pandoc=2.11=h0dc7051_0
@@ -75,6 +86,8 @@ dependencies:
   - qtconsole=4.7.7=py_0
   - qtpy=1.9.0=py_0
   - readline=8.0=h1de35cc_0
+  - scikit-learn=0.23.2=py38h959d312_0
+  - scipy=1.5.0=py38hbab996c_0
   - send2trash=1.5.0=py38_0
   - setuptools=50.3.0=py38h0dc7051_1
   - sip=4.19.8=py38h0a44026_0
@@ -82,6 +95,7 @@ dependencies:
   - sqlite=3.33.0=hffcf06c_0
   - terminado=0.9.1=py38_0
   - testpath=0.4.4=py_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=hb0a8c7a_0
   - tornado=6.0.4=py38h1de35cc_1
   - traitlets=5.0.5=py_0
