--- a/environment.yml
+++ b/environment.yml
@@ -39,7 +39,12 @@ dependencies:
   - jupyter=1.0.0=py38_7
   - jupyter_client=6.1.7=py_0
   - jupyter_console=6.2.0=py_0
+  - jupyter_contrib_core=0.3.3=py_2
+  - jupyter_contrib_nbextensions=0.5.1=pyhd8ed1ab_2
   - jupyter_core=4.6.3=py38_0
+  - jupyter_highlight_selected_word=0.2.0=py38h50d1736_1005
+  - jupyter_latex_envs=1.4.6=pyhd8ed1ab_1002
+  - jupyter_nbextensions_configurator=0.4.1=py38h50d1736_2
   - jupyterlab_pygments=0.1.2=py_0
   - kiwisolver=1.2.0=py38h04f5b5a_0
   - lcms2=2.11=h92f6f08_0
@@ -51,7 +56,10 @@ dependencies:
   - libpng=1.6.37=ha441bb4_0
   - libsodium=1.0.18=h1de35cc_0
   - libtiff=4.1.0=hcb84e12_1
+  - libxml2=2.9.10=h7cdb67c_3
+  - libxslt=1.1.34=h83b36ba_0
   - llvm-openmp=10.0.0=h28b9765_0
+  - lxml=4.6.1=py38h63b7cb6_0
   - lz4-c=1.9.2=h79c402e_3
   - markupsafe=1.1.1=py38h1de35cc_1
   - matplotlib=3.3.1=0
@@ -91,6 +99,8 @@ dependencies:
   - pyrsistent=0.17.3=py38haf1e3a3_0
   - python=3.8.5=h26836e1_1
   - python-dateutil=2.8.1=py_0
+  - python_abi=3.8=2_cp38
+  - pyyaml=5.3.1=py38haf1e3a3_1
   - pyzmq=19.0.2=py38hb1e8313_1
   - qt=5.9.7=h468cd18_1
   - qtconsole=4.7.7=py_0
@@ -114,6 +124,7 @@ dependencies:
   - wheel=0.35.1=py_0
   - widgetsnbextension=3.5.1=py38_0
   - xz=5.2.5=h1de35cc_0
+  - yaml=0.2.5=haf1e3a3_0
   - zeromq=4.3.3=hb1e8313_3
   - zipp=3.3.1=py_0
   - zlib=1.2.11=h1de35cc_3
