--- a/environment.yml
+++ b/environment.yml
@@ -11,9 +11,12 @@ dependencies:
   - backcall=0.2.0=py_0
   - blas=1.0=mkl
   - bleach=3.2.1=py_0
+  - brotlipy=0.7.0=py38haf1e3a3_1000
   - ca-certificates=2020.10.14=0
   - certifi=2020.6.20=py38_0
   - cffi=1.14.3=py38hed5b41f_0
+  - chardet=3.0.4=py38_1003
+  - cryptography=3.1.1=py38hddc9c9b_0
   - cycler=0.10.0=py38_0
   - dbus=1.13.18=h18a8e69_0
   - decorator=4.4.2=py_0
@@ -24,6 +27,7 @@ dependencies:
   - gettext=0.19.8.1=h15daf44_3
   - glib=2.66.1=h9bbe63b_0
   - icu=58.2=h0a44026_3
+  - idna=2.10=py_0
   - importlib-metadata=2.0.0=py_1
   - importlib_metadata=2.0.0=1
   - intel-openmp=2020.2=258
@@ -35,6 +39,7 @@ dependencies:
   - jinja2=2.11.2=py_0
   - joblib=0.17.0=py_0
   - jpeg=9b=he5867d9_2
+  - json5=0.9.5=py_0
   - jsonschema=3.2.0=py_2
   - jupyter=1.0.0=py38_7
   - jupyter_client=6.1.7=py_0
@@ -45,7 +50,10 @@ dependencies:
   - jupyter_highlight_selected_word=0.2.0=py38h50d1736_1005
   - jupyter_latex_envs=1.4.6=pyhd8ed1ab_1002
   - jupyter_nbextensions_configurator=0.4.1=py38h50d1736_2
+  - jupyterlab=2.2.6=py_0
   - jupyterlab_pygments=0.1.2=py_0
+  - jupyterlab_server=1.2.0=py_0
+  - jupyterlab_widgets=1.0.2=pyhd8ed1ab_0
   - kiwisolver=1.2.0=py38h04f5b5a_0
   - lcms2=2.11=h92f6f08_0
   - libcxx=10.0.0=1
@@ -94,9 +102,11 @@ dependencies:
   - ptyprocess=0.6.0=py38_0
   - pycparser=2.20=py_2
   - pygments=2.7.1=py_0
+  - pyopenssl=19.1.0=py_1
   - pyparsing=2.4.7=py_0
   - pyqt=5.9.2=py38h655552a_2
   - pyrsistent=0.17.3=py38haf1e3a3_0
+  - pysocks=1.7.1=py38_1
   - python=3.8.5=h26836e1_1
   - python-dateutil=2.8.1=py_0
   - python_abi=3.8=2_cp38
@@ -106,6 +116,7 @@ dependencies:
   - qtconsole=4.7.7=py_0
   - qtpy=1.9.0=py_0
   - readline=8.0=h1de35cc_0
+  - requests=2.24.0=py_0
   - scikit-learn=0.23.2=py38h959d312_0
   - scipy=1.5.0=py38hbab996c_0
   - send2trash=1.5.0=py38_0
@@ -119,6 +130,7 @@ dependencies:
   - tk=8.6.10=hb0a8c7a_0
   - tornado=6.0.4=py38h1de35cc_1
   - traitlets=5.0.5=py_0
+  - urllib3=1.25.11=py_0
   - wcwidth=0.2.5=py_0
   - webencodings=0.5.1=py38_1
   - wheel=0.35.1=py_0
